refactor(JSONHelper/CSVHelper): Should be a static class